cluster/apps/tools/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio-operator
spec:
  ingressClassName: "traefik"
  rules:
    - host: "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  name: http
  tls:
    - hosts:
        - "minio.${SECRET_DOMAIN}"
      secretName: "minio-${SECRET_DOMAIN/./-}-tls"
